# shopify-fulfillment-tool-v8.4

./: .gitignore  DESIGN.md  DOCUMENTATION.md  README.md  TECHNICAL_DOCUMENTATION.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: build_release.yml
data/templates/: dropALL.XLS  dropSingle.XLS
gui/: file_handler.py  pandas_model.py  profile_manager_dialog.py  report_builder_window_pyside.py  report_selection_dialog.py  ui_manager.py
shopify-fulfillment-tool-8.4.9/: gui_main.py  requirements-dev.txt
shopify-fulfillment-tool-8.4.9/gui/: actions_handler.py  log_handler.py  log_viewer.py  main_window_pyside.py  settings_window_pyside.py  worker.py
shopify-fulfillment-tool-8.4.9/shopify_tool/: core.py  packing_lists.py  rules.py  stock_export.py  utils.py
shopify-fulfillment-tool-8.4.9/tests/: test_analysis.py  test_analysis_exhaustive.py  test_core.py  test_packing_lists.py  test_rules.py  test_scenarios.py  test_stock_export.py  test_ui_logic.py
shopify_tool/: __init__.py  analysis.py  logger_config.py
tests/: test_exclude_skus.py  test_run_analysis.py  test_utils.py
